--- a/Assignment.html
+++ b/Assignment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Raising Rabbits</title>
+		<title>All About Dogs</title>
 		<meta charset="utf-8">
 	</head>
 	<nav>
@@ -11,8 +11,8 @@
 	</nav>
 	<body>
 		<main>
-			<h1>Rabbit Breeds</h1>
-			<p>New Zealand, Califorian, Holland Lop</p>
+			<h1>Dog Breeds</h1>
+			<p>German Shepherd, Bulldog, Golden Retriever</p>
 			<p> Here is an example of a Blockquote from W3schools's website: </p>
 			<blockquote cite="https://www.w3schools.com/tags/tag_blockquote.asp">
 			Where it says that blockquotes are tags that specify a section that is quoted from another source.
@@ -20,10 +20,10 @@
 			</blockquote>
 		</main>
 		<h3>Diet</h3>
-		<p>Here are the most typical types of diets for rabbits</p>
+		<p>These are the type of things you should feed you dog!</p>
 		<a href="Dog.html">Dog Image </a> 
 		<p>
 		<a href="https://images.ctfassets.net/nx3pzsky0bc9/2xOR5jtDFS9EzPw3WmmlHC/3113cc789ef08ef32ec754b55c47bede/Kitten_laying_in_pink_bed.jpeg?w=1200&h=627&fit=fill&f=faces&fm=webp"> Cute kitten</a>
 		</p>
-	<footer> <h6>Contact us for any questions relating to your rabbit!</h6> </footer>
+	<footer> <h6>Contact us about any questions you might have for your dog!</h6> </footer>
 </html>
