Changed image file path

--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -20,7 +20,7 @@
 		
 		<p><b>This is bold, </b><i>this is italicized, </i>and <u>this is underlined</u></p>
 		
-		<img src="C:\Users\Nick\Documents\TechAcademy\HTML-and-CSS-Projects\doggo.jpeg" alt="A cute dog" width="300"
+		<img src="../doggo.jpeg" alt="A cute dog" width="300"
 		height="400">
 	</body>
 	
