Added a paragraph in VS Code

--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -22,6 +22,8 @@
 		
 		<img src="../doggo.jpeg" alt="A cute dog" width="300"
 		height="400">
+
+		<p>Added another paragraph.</p>
 	</body>
 	
 </html>
