--- a/WebsiteProject/index.html
+++ b/WebsiteProject/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Indie Industry Games</title>
+		<link rel="icon" type="image/x-icon" href="./images/icons/favicon.ico">
 		<meta charset="utf-8">
 	</head>
 		
