Complete Website Submission

--- a/WebsiteProject/index.html
+++ b/WebsiteProject/index.html
@@ -18,8 +18,8 @@
 					<a href="#gallery"><li>Gallery</li></a>
 					<a href="#contact"><li>Beta Test</li></a>
 				</ul>
-			<div>
-		<div>
+			</div>
+		</div>
 		<!--END NAV-->
 		
 		<!--HOME-->
@@ -35,7 +35,7 @@
 		<!--GALLERY-->
 		<section id="gallery">
 			<div class="container">
-				<h1>Gallery</h>
+				<h1>Gallery</h1>
 				<div class="flex-container">
 				
 					<!--PHOTO-CONTAINER 1-->
@@ -157,7 +157,7 @@
 				<div class="heading-padding">
 					<h1 class="heading-padding">Upcoming Beta Tests</h1>
 					<div class="reservation">
-						<h2><span>Start playing first as beta testers get 2-weeks early access before launch!</span>
+						<h2><span>Start playing first as beta testers get <h3>2-weeks early access</h3> before launch!</span>
 							<br />Claim your beta code today!
 						</h2>
 						<p class="rsvp-text">
