Started CSS on One-Page-Website

--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Squad Shooters Online</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="./css/one_page_website.css">
 	</head>
 		
 		
@@ -18,8 +19,8 @@
 					<a href="#gameplay"><li>Gameplay</li></a>
 					<a href="#signup"><li>Free Skin</li></a>
 				</ul>
-			<div>
-		<div>
+			</div>
+		</div>
 		<!--END NAV-->
 		
 		<!--HOME-->
@@ -113,7 +114,7 @@
 					
 					<!--MAP GALLERY -->
 					<section>
-					<h3>Choose your mission and where you want to fight!<h3>
+					<h3>Choose your mission and where you want to fight!</h3>
 						<div>
 							<!--PHOTO-MAP 1-->
 							<div>
@@ -169,12 +170,12 @@
 					<h1>Sign-Up to claim your free in-game skin!</h1>
 					<div>
 						<h2><span>By signing up you will recieve your limited addition skin code that can be redeemed on launch day!</span>
-							<br />Limited amount of codes available, don't miss out!
+							<br/>Limited amount of codes available, don't miss out!
 						</h2>
 						<p>
 							Please provide us with your basic contact information and preferred platform.
 						</p>
-						<div>
+						<div class="betacode">
 							<form action="" method="post">
 								<input class="skin" type="text" value="First Name">
 								<input class="skin" type="text" value="Last Name">
@@ -182,7 +183,7 @@
 								<input class="skin" type="text" value="Platform">
 								<input class="skin" type="text" value="Phone Number">
 								<div class="form-spacer">
-									<label class="terms">Terms and Conditions</lable>
+									<label class="terms">Terms and Conditions</label>
 								</div>
 								<div>
 									<input type="submit" value="Submit">
