--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -2,14 +2,12 @@
 <html lang="en">
 	<head>
 		<title>Squad Shooters Online</title>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="./css/one_page_website.css">
+		<script src="./JS/one_page_website.js" defer></script>
 	</head>
 		
-		
-		
 	<body>
-	
 		<!-- NAV -->
 		<div>
 			<div>
@@ -26,36 +24,67 @@
 		<!--HOME-->
 		<div id="home">
 			<div>
-				<div>
-					<h1>Sqaud Shooter Online</h1>
-					<p>A 4 player co-op mobile shooter coming soon! An action packed experience with complete customization available for never ending carnage!
-					sign-up and favorite in the app store to get free in game cosmetics!</p>
+				<h1>Sqaud Shooter Online</h1>
+				<p>A 4 player co-op mobile shooter coming soon! An action packed experience with complete customization available for never ending carnage!
+				sign-up and favorite in the app store to get free in game cosmetics!</p>
+			</div>
+			<div class="row">
+				<div class="column">
+				<img src="./images/thumb/thumbnail_free1.png" onClick="openModal();currentSlide(1)" alt="Free Cosmetic" class="hover-shadow">
 				</div>
-				<div>
-					<div>
-					<img src="./images/thumb/thumbnail_free1.png" alt="Free Cosmetic">
-						<div>
-							<h3>Click to Claim</h3>
-						</div>
-					</div>
-					<div>
-					<img src="./images/thumb/thumbnail_free2.png" alt="Free Cosmetic">
-						<div>
-							<h3>Click to Claim</h3>
-						</div>
-					</div>
-					<div>
-					<img src="./images/thumb/thumbnail_free3.png" alt="Free Cosmetic">
-						<div>
-							<h3>Click to Claim</h3>
-						</div>
-					</div>
+				<div class="column">
+				<img src="./images/thumb/thumbnail_free2.png" onClick="openModal();currentSlide(2)"alt="Free Cosmetic" class="hover-shadow">
+				</div>
+				<div class="column">
+				<img src="./images/thumb/thumbnail_free3.png" onClick="openModal();currentSlide(3)" alt="Free Cosmetic" class="hover-shadow">
 				</div>
 			</div>
 		</div>
 		<!--END HOME -->
 		
-		<!--  -->
+		<!-- THE MODAL/Lightbox -->
+		 <div id="myModal" class="modal">
+			<span class="close cursor" onclick="closeModal()">&times;</span>
+			<div class="modal-content">
+
+				<div class="mySlides">
+					<div class="numbertext">1 / 3</div>
+					<img src="./images/thumb/thumbnail_free1Big.png" style="width:100%">
+				</div>
+
+				<div class="mySlides">
+					<div class="numbertext">2 / 3</div>
+					<img src="./images/thumb/thumbnail_free2Big.png" style="width:100%">
+				</div>
+
+				<div class="mySlides">
+					<div class="numbertext">3 / 3</div>
+					<img src="./images/thumb/thumbnail_free3Big.png" style="width:100%">
+				</div>
+
+				<!--Next/Previous controls-->
+				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+				<!--Caption Text-->
+				<div class="caption-container">
+					<p id="caption"></p>
+				</div>
+
+				<!--Thumbnail image controls-->
+				<div class="column">
+					<img class="demo" src="images/thumb/thumbnail_free1.png" onclick="currentSlide(1)" alt="Pink Pursuer">
+				</div>
+
+				<div class="column">
+					<img class="demo" src="images/thumb/thumbnail_free2.png" onclick="currentSlide(2)" alt="Nighttime Ninja">
+				</div>
+
+				<div class="column">
+					<img class="demo" src="images/thumb/thumbnail_free3.png" onclick="currentSlide(3)" alt="Baddie Bandit">
+				</div>
+			</div>
+		 </div>
 		
 		<!--GALLERY-->
 		<section>
