--- a/Academy-Cinemas/index.html
+++ b/Academy-Cinemas/index.html
@@ -15,10 +15,7 @@
 </head>
 
 <body>
-    <!-- BOOTSTRAP JAVASCRIPT-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+    
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
@@ -61,11 +58,17 @@
             <!--Beauty and the Beast-->
             <div class="d-flex flex-row flex-wrap spacer" id="beautyandthebeast">
                 <div class="col-lg-5 mx-auto">
-                    <img src="images/beautyandthebeast.jpg" class="img-fluid" alt="Beauty and the Beast Movie poster">
+                    <span class="d-inline-block" tabindex="0"
+                        data-bs-toggle="popover" 
+                        data-bs-trigger="hover focus"
+                        data-bs-img="images/fourfivestars.png" 
+                        data-bs-title="Beauty and the Beast Rating">
+                        <img src="images/beautyandthebeast.jpg" class="img-fluid" alt="Beauty and the Beast Movie poster">
+                    </span>
                 </div>
                 <div class="card col-lg-5 mx-auto">
                     <div class="card-body">
-                        <h3 class="card-title">Beauty and the Beast</h3>
+                        <h3 class="card-title"><span class="badge rounded-pill bg-primary">New</span>Beauty and the Beast</h3>
                         <!--Movie Description-->
                         <p class="lead">A selfish prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a woman
                         he keeps as prisoner.
@@ -132,13 +135,25 @@
                     </div>
                 </div>
                 <div class="col-lg-5 mx-auto">
-                    <img src="images/ghostintheshell1.jpg" class="img-fluid" alt="Ghost in the Shell Movie poster">
+                    <span class="d-inline-block" tabindex="0" 
+                        data-bs-toggle="popover"
+                        data-bs-trigger="hover focus"
+                        data-bs-img="images/fourstars.png" 
+                        data-bs-title="Ghost in the Shell Rating">
+                        <img src="images/ghostintheshell1.jpg" class="img-fluid" alt="Ghost in the Shell Movie poster">
+                    </span>
                 </div>
             </div>
             <!--Kong Skull Island-->
             <div class="d-flex flex-row flex-wrap spacer" id="kongskullisland">
                 <div class="col-lg-5 mx-auto">
-                    <img src="images/kongskullisland1.jpg" class="img-fluid" alt="Kong Skull Island Movie poster">
+                    <span class="d-inline-block" tabindex="0" 
+                        data-bs-toggle="popover"
+                        data-bs-trigger="hover focus"
+                        data-bs-img="images/fourfivestars.png" 
+                        data-bs-title="Kong Skull Island Rating">
+                        <img src="images/kongskullisland1.jpg" class="img-fluid" alt="Kong Skull Island Movie poster">
+                    </span>
                 </div>
                 <div class="card col-lg-5 mx-auto">
                     <div class="card-body">
@@ -186,7 +201,7 @@
                     <div class="card text-center">
                         <h5 class="card-title">Please select a movie</h5>
                         <div class="card-body">
-                            <select class="form-select" aria-label="Movie title selection">
+                            <select id="movieSelect" class="form-select" aria-label="Movie title selection">
                                 <option selected>Select Movie</option>
                                 <option value="1">Beauty and the Beast</option>
                                 <option value="2">Ghost in the Shell</option>
@@ -200,7 +215,7 @@
                     <div class="card text-center">
                         <h5 class="card-title">Please select a show time</h5>
                         <div class="card-body">
-                            <select class="form-select" aria-label="Show time selection">
+                            <select id="timeSelect" class="form-select" aria-label="Show time selection">
                                 <option selected>Select Time</option>
                                 <option value="1">10:00 AM</option>
                                 <option value="2">11:30 AM</option>
@@ -225,11 +240,21 @@
             <!--Buy Tickets Button-->
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <button type="submit" class="btn yellow-btn">Buy Tickets</button>
+                    <button type="submit" class="btn yellow-btn" onclick="buyTickets()">Buy Tickets</button>
                 </div>
             </div>
         </div>
     </section>
+    <!--BOOTSTRAP TOAST-->
+    <div id="toastDisplay" class="custom-toast toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Ticket Information</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div id="toastBody" class="toast-body">
+            <!--Selected Options will be displayed here-->
+        </div>
+    </div>
     <!--CONTACT FORM-->
     <section>
         <div class="container" id="contact">
@@ -266,6 +291,13 @@
             </footer>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
+    <script src="javascript/javascript.js"></script>
 </body>
 
 </html>
