--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -32,9 +32,9 @@
 
 			$("#slideshow > div:gt(0)").hide();
 
-			setInterval(function () {
+			setInterval(function() {
 				$('#slideshow > div:first')
-					.fadeout(1000)
+					.fadeOut(1000)
 					.next()
 					.fadeIn(1000)
 					.end()
